add about section

--- a/index.html
+++ b/index.html
@@ -157,7 +157,33 @@
   </div>
 </section>
 
-
+<section class="about-us">
+        <div class="container">
+            <div class="image-section">
+                <img src="images/visa.webp" alt="Visa application" />
+            </div>
+            <div class="text-section">
+              <p style="color: red;" >LET'S KNOW US</p>
+                <h2>About Us</h2>
+                <p>KCTT is a leading global citizenship and residency advisory firm, helping clients achieve their immigration goals through strategic planning and personalized services. With a team of experienced professionals, we provide comprehensive support for residency, citizenship, and investment programs across multiple jurisdictions.</p>
+                <div class="stats">
+                    <div class="stat">
+                        <p>2+</p>
+                        <p>Offices worldwide</p>
+                    </div>
+                    <div class="stat">
+                        <p>10+</p>
+                        <p>Investment migration options</p>
+                    </div>
+                    <div class="stat">
+                        <p>23+</p>
+                        <p>Experiences in Visa Service</p>
+                    </div>
+                </div>
+                <button class="cta-btn">Know More About Us</button>
+            </div>
+        </div>
+    </section>
 
 </body>
 </html>
