our presence add

--- a/index.html
+++ b/index.html
@@ -380,6 +380,51 @@
   </div>
 </section>
 
+<section class="our-presence">
+  <div class="left-side">
+    <div class="map-container">
+      <img src="images/worldmap.png" alt="World Map" class="world-map">
+
+      <!-- UAE -->
+      <div class="marker uae">
+        <img src="images/dubai.png" alt="UAE Flag">
+        <span class="country-name">UAE</span>
+      </div>  
+            
+      <!-- Qatar -->
+      <div class="marker qatar">
+        <img src="images/qatar.webp" alt="Qatar Flag">
+        <span class="country-name">Qatar</span>
+      </div>
+
+
+      <!-- Airplane (Font Awesome icon) -->
+      <div class="plane">
+        <i class="fas fa-plane"></i>
+      </div>
+
+      <!-- Dotted Path -->
+      <div class="path"></div>
+    </div>
+  </div>
+
+  <div class="right-side">
+    <h5>OUR PRESENCE</h5>
+    <h2>Since 2002, Serving Clients</h2>
+    <p>
+      With branches and trusted partners across multiple countries, we have built 
+      a reputation for delivering reliable, discreet, and client-focused immigration 
+      and investment advisory services worldwide.
+    </p>
+    <a href="#" class="investment-button">VIEW INVESTMENT OPPORTUNITIES →</a>
+  </div>
+</section>
+
+<!-- Font Awesome (add in your <head> if not already included) -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+
+<section class="footer-section">
 
 <footer class="footer">
   <div class="footer-container">
