modify home page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>KCTT Website</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="script.js">
+  <link rel="stylesheet" href="contact.html">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 </head>
@@ -159,7 +160,7 @@
   </div>
 </section>
 
-<section class="about-us">
+<section class="about-us" id="about">
         <div class="container">
             <div class="image-section">
                 <img src="images/visa.webp" alt="Visa application" />
@@ -275,7 +276,7 @@
     </div>
     </section>
     
-    <section class="services-section">
+    <section class="services-section" id="service">
   <div class="services-overlay"></div>
 
   <div class="services-container">
@@ -483,9 +484,9 @@
       <h3>Quick Links</h3>
       <ul>
         <li><a href="#">➜ Home</a></li>
-        <li><a href="#">➜ About Us</a></li>
-        <li><a href="#">➜ Services</a></li>
-        <li><a href="#">➜ Contact</a></li>
+        <li><a href="#about">➜ About Us</a></li>
+        <li><a href="#service">➜ Services</a></li>
+        <li><a href="contact.html">➜ Contact</a></li>
       </ul>
     </div>
 
