contact html changes

--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
   <title>Contact | KCTT Group</title>
   <link rel="stylesheet" href="contact.css">
   <link rel="stylesheet" href="index.html">
+  <link rel="stylesheet" href="canadaResidency.html">
 </head>
 <body>
 
@@ -32,7 +33,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="#">Citizenship By Investment</a></li>
           <li><a href="#">Residency By Investment</a></li>
-          <li><a href="#">Canada Permanent Residency</a></li>
+          <li><a href="canadaResidency.html">Canada Permanent Residency</a></li>
           <li><a href="#">Legal Services For Canadian Expats</a></li>
           <li><a href="#">Real Estate Investment Advisory Services</a></li>
           <li><a href="#">Other Services</a></li>
