--- a/contact.html
+++ b/contact.html
@@ -31,13 +31,13 @@
       <nav class="main-nav">
       <ul id="navList">
           <li><a href="index.html">Home</a></li>
-          <li><a href="#">Citizenship By Investment</a></li>
-          <li><a href="#">Residency By Investment</a></li>
+          <li><a href="citizenship.html">Citizenship By Investment</a></li>
+          <li><a href="residencyInvestment.html">Residency By Investment</a></li>
           <li><a href="canadaResidency.html">Canada Permanent Residency</a></li>
-          <li><a href="#">Legal Services For Canadian Expats</a></li>
-          <li><a href="#">Real Estate Investment Advisory Services</a></li>
-          <li><a href="#">Other Services</a></li>
-          <li><a href="contact.html" data-index="7">Contact Us</a></li>
+          <li><a href="legalService.html">Legal Services For Canadian Expats</a></li>
+          <li><a href="realEstate.html">Real Estate Investment Advisory Services</a></li>
+          <li><a href="otherService.html">Other Services</a></li>
+          <li><a href="contact.html" data-index="7" class="active" style="width: 100%;">Contact Us</a></li>
         </ul>
       </nav>
     </div>
