missing content add

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
       </a>
       <nav class="main-nav">
         <ul id="navList">
-          <li><a href="#" data-index="0">Home</a></li>
+          <li><a href="#" data-index="0" class="active">Home</a></li>
           <li><a href="#" data-index="1">Citizenship By Investment</a></li>
           <li><a href="#" data-index="2">Residency By Investment</a></li>
           <li><a href="#" data-index="3">Canada Permanent Residency</a></li>
-          <li><a href="#" data-index="4">Legal Services For Canadian Expats</a></li>
+          <li><a href="legalService.html" data-index="4">Legal Services For Canadian Expats</a></li>
           <li><a href="#" data-index="5">Real Estate Investment Advisory Services</a></li>
           <li><a href="#" data-index="6">Other Services</a></li>
           <li><a href="#" data-index="7">Contact Us</a></li>
