missing things add

--- a/contact.html
+++ b/contact.html
@@ -116,7 +116,7 @@
     <!-- Right Side: Info Box -->
     <div class="contact-info">
       <p class="sub-heading">CONTACT US & CONSULTATION SERVICE</p>
-      <h1>Get In Touch with KCTT Group</h1>
+      <h1>Get In Touch with KCTT</h1>
       <div class="red-line"></div>
       <h2>Let us help you today</h2>
     </div>
