--- a/legalService.html
+++ b/legalService.html
@@ -83,7 +83,7 @@
         <h3>Notarization Services</h3>
         <img src="images/notarization.webp" alt="Notarization Services">
         <p>Notarization of all types of documents for use in Canada, ensuring validity and compliance.</p>
-        <a href="#" class="learn-more">Learn More <span>&rarr;</span></a>
+        <a href="/advisoryServices/notarization.html" class="learn-more">Learn More <span>&rarr;</span></a>
       </div>
 
       <!-- Service Card 2 -->
@@ -101,73 +101,73 @@
         <p>Drafting, witnessing, and notarization of power of attorney documents for Canadian use.</p>
         <a href="#" class="learn-more">Learn More <span>&rarr;</span></a>
       </div>
-      <!-- Service Card 1 -->
+      <!-- Service Card 4 -->
       <div class="service-card">
-        <h3>Notarization Services</h3>
-        <img src="images/notarization.webp" alt="Notarization Services">
-        <p>Notarization of all types of documents for use in Canada, ensuring validity and compliance.</p>
+        <h3>Real Estate Transaction</h3>
+        <img src="images/reTrans.webp" alt="Notarization Services">
+        <p>Witnessing and verification of purchase & sale agreements and mortgage documents for Canadian properties.</p>
         <a href="#" class="learn-more">Learn More <span>&rarr;</span></a>
       </div>
 
-      <!-- Service Card 2 -->
+      <!-- Service Card 5 -->
       <div class="service-card">
-        <h3>Wills & Estate Planning</h3>
-        <img src="images/wills.png" alt="Wills & Estate Planning">
-        <p>Drafting wills, codicils, and estate planning documents to protect your family’s future.</p>
+        <h3>Banking & Investment Accounts</h3>
+        <img src="images/bankInvestAcc.webp" alt="Wills & Estate Planning">
+        <p>Witnessing of bank and investment account applications, with certified Questrade agent services in Qatar & UAE.</p>
         <a href="#" class="learn-more">Learn More <span>&rarr;</span></a>
       </div>
 
-      <!-- Service Card 3 -->
+      <!-- Service Card 6 -->
       <div class="service-card">
-        <h3>Power of Attorney</h3>
-        <img src="images/attorny.png" alt="Power of Attorney">
-        <p>Drafting, witnessing, and notarization of power of attorney documents for Canadian use.</p>
+        <h3>Family & Divorce Matters</h3>
+        <img src="images/divorce.webp" alt="Power of Attorney">
+        <p>Consultation for divorce, separation agreements, and family law issues for Canadian expats.</p>
         <a href="#" class="learn-more">Learn More <span>&rarr;</span></a>
       </div>
-      <!-- Service Card 1 -->
+      <!-- Service Card 7 -->
       <div class="service-card">
-        <h3>Notarization Services</h3>
-        <img src="images/notarization.webp" alt="Notarization Services">
-        <p>Notarization of all types of documents for use in Canada, ensuring validity and compliance.</p>
-        <a href="#" class="learn-more">Learn More <span>&rarr;</span></a>
-      </div>
-
-      <!-- Service Card 2 -->
-      <div class="service-card">
-        <h3>Wills & Estate Planning</h3>
-        <img src="images/wills.png" alt="Wills & Estate Planning">
-        <p>Drafting wills, codicils, and estate planning documents to protect your family’s future.</p>
+        <h3>Real Estate Financing</h3>
+        <img src="images/reEsFinance.webp" alt="Notarization Services">
+        <p>Assistance with financing the purchase of real estate in Canada through our affiliate Canadian company.</p>
         <a href="#" class="learn-more">Learn More <span>&rarr;</span></a>
       </div>
 
-      <!-- Service Card 3 -->
+      <!-- Service Card 8 -->
       <div class="service-card">
-        <h3>Power of Attorney</h3>
-        <img src="images/attorny.png" alt="Power of Attorney">
-        <p>Drafting, witnessing, and notarization of power of attorney documents for Canadian use.</p>
-        <a href="#" class="learn-more">Learn More <span>&rarr;</span></a>
-      </div>
-      <!-- Service Card 1 -->
-      <div class="service-card">
-        <h3>Notarization Services</h3>
-        <img src="images/notarization.webp" alt="Notarization Services">
-        <p>Notarization of all types of documents for use in Canada, ensuring validity and compliance.</p>
+        <h3>Canadian Tex Consultancy</h3>
+        <img src="images/canadaTax.jpeg" alt="Wills & Estate Planning">
+        <p>Advisory on Canadian taxation matters for individuals and businesses with cross-border obligations.</p>
         <a href="#" class="learn-more">Learn More <span>&rarr;</span></a>
       </div>
 
-      <!-- Service Card 2 -->
+      <!-- Service Card 9 -->
       <div class="service-card">
-        <h3>Wills & Estate Planning</h3>
-        <img src="images/wills.png" alt="Wills & Estate Planning">
-        <p>Drafting wills, codicils, and estate planning documents to protect your family’s future.</p>
+        <h3>Police Clearance (RCMP)</h3>
+        <img src="images/police clearance.webp" alt="Power of Attorney">
+        <p>Application assistance for Canadian RCMP police clearance certificates for immigration and employment.</p>
+        <a href="#" class="learn-more">Learn More <span>&rarr;</span></a>
+      </div>
+      <!-- Service Card 10 -->
+      <div class="service-card">
+        <h3>Immigration & Citizenship</h3>
+        <img src="images/immigration.avif" alt="Notarization Services">
+        <p>Expert guidance on maintaining Canadian citizenship, dual citizenship options, and immigration matters for Canadian expats and their families.</p>
         <a href="#" class="learn-more">Learn More <span>&rarr;</span></a>
       </div>
 
-      <!-- Service Card 3 -->
+      <!-- Service Card 11 -->
       <div class="service-card">
-        <h3>Power of Attorney</h3>
-        <img src="images/attorny.png" alt="Power of Attorney">
-        <p>Drafting, witnessing, and notarization of power of attorney documents for Canadian use.</p>
+        <h3>Business & Corporate Law</h3>
+        <img src="images/businessCorporate.jpg" alt="Wills & Estate Planning">
+        <p>Comprehensive legal support for Canadian expats running businesses, including corporate structuring, compliance, and international business law.</p>
+        <a href="#" class="learn-more">Learn More <span>&rarr;</span></a>
+      </div>
+
+      <!-- Service Card 12 -->
+      <div class="service-card">
+        <h3>Regulatory Compliance</h3>
+        <img src="images/compliance.jpg" alt="Power of Attorney">
+        <p>Expert guidance on regulatory compliance matters affecting Canadian expats, including banking, investment, and financial reporting requirements.</p>
         <a href="#" class="learn-more">Learn More <span>&rarr;</span></a>
       </div>
     </div>
@@ -483,12 +483,15 @@ body {
 
 .service-card:hover {
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+  transform: translateY(-5px);
 }
 
 .service-card h3 {
   font-size: 20px;
   margin-bottom: 15px;
   color: #111;
+  font-weight: normal;
+  font-family: 'Times New Roman', Times, serif;
 }
 
 .service-card img {
@@ -500,19 +503,22 @@ body {
 }
 
 .service-card p {
-  font-size: 15px;
+  font-size: 13px;
   line-height: 1.6;
-  color: #555;
+  color: #727070;
   margin-bottom: auto;
+  font-style: italic;
 }
 
 .learn-more {
   margin-top: 20px;
   text-decoration: none;
-  font-weight: bold;
+  font-size: 14px;
+  font-weight: normal;
   color: #d6252a;
   align-self: flex-end;
   transition: color 0.3s;
+
 }
 
 .learn-more span {
