--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="bg-layer two"></div>
     <div class="hero-content">
       <h1 id="heroTitle">Citizenship By Investment</h1>
-      <a href="#" class="cta-btnh">CONNECT WITH US</a>
+      <a href="contact.html" class="cta-btnh">CONNECT WITH US</a>
     </div>
   </section>
 
@@ -314,7 +314,7 @@
         offering secure second citizenship and tailored advisory services
         for expatriates and relocating professionals
       </p>
-      <a href="#" class="btn-readmore">READ MORE ABOUT US <i class="fa-solid fa-arrow-right"></i></a>
+      <a href="about.html" class="btn-readmore">READ MORE ABOUT US <i class="fa-solid fa-arrow-right"></i></a>
     </div>
 
     <!-- Right Side -->
