--- a/citizenship.html
+++ b/citizenship.html
@@ -67,7 +67,7 @@
 
     <!-- Right Side -->
     <div class="canada-pr-right">
-      <img src="images/prgr.jpeg" alt="Canada City View with Flag" />
+      <img src="images/flags.jpg" alt="Canada City View with Flag" />
     </div>
   </div>
 </section>
