--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
         <li><i class="fa-solid fa-circle-check"></i> Favorable tax planning</li>
       </ul>
 
-      <a href="#" class="btn-primary">VIEW ALL SERVICES <i class="fa-solid fa-arrow-right"></i></a>
+      <a href="otherService.html" class="btn-primary">VIEW ALL SERVICES <i class="fa-solid fa-arrow-right"></i></a>
     </div>
     
     <!-- Right Image -->
@@ -443,7 +443,7 @@
       a reputation for delivering reliable, discreet, and client-focused immigration 
       and investment advisory services worldwide.
     </p>
-    <a href="#" class="investment-button">VIEW INVESTMENT OPPORTUNITIES →</a>
+    <a href="ourPresence.html" class="investment-button">VIEW INVESTMENT OPPORTUNITIES →</a>
   </div>
 </section>
 
@@ -466,7 +466,7 @@
         </p>
       </ul>
 
-      <a href="#" class="btn-primaryc">SCHEDULE A CONSULTATION <i class="fa-solid fa-arrow-right"></i></a>
+      <a href="contact.html" class="btn-primaryc">SCHEDULE A CONSULTATION <i class="fa-solid fa-arrow-right"></i></a>
     </div>
     
     <!-- Right Image -->
