--- a/legalService.html
+++ b/legalService.html
@@ -91,7 +91,7 @@
         <h3>Wills & Estate Planning</h3>
         <img src="images/wills.png" alt="Wills & Estate Planning">
         <p>Drafting wills, codicils, and estate planning documents to protect your family’s future.</p>
-        <a href="#" class="learn-more">Learn More <span>&rarr;</span></a>
+        <a href="/advisoryServices/wills.html" class="learn-more">Learn More <span>&rarr;</span></a>
       </div>
 
       <!-- Service Card 3 -->
@@ -99,14 +99,14 @@
         <h3>Power of Attorney</h3>
         <img src="images/attorny.png" alt="Power of Attorney">
         <p>Drafting, witnessing, and notarization of power of attorney documents for Canadian use.</p>
-        <a href="#" class="learn-more">Learn More <span>&rarr;</span></a>
+        <a href="/advisoryServices/poa.html" class="learn-more">Learn More <span>&rarr;</span></a>
       </div>
       <!-- Service Card 4 -->
       <div class="service-card">
         <h3>Real Estate Transaction</h3>
         <img src="images/reTrans.webp" alt="Notarization Services">
         <p>Witnessing and verification of purchase & sale agreements and mortgage documents for Canadian properties.</p>
-        <a href="#" class="learn-more">Learn More <span>&rarr;</span></a>
+        <a href="/advisoryServices/realestateTransaction.html" class="learn-more">Learn More <span>&rarr;</span></a>
       </div>
 
       <!-- Service Card 5 -->
@@ -114,7 +114,7 @@
         <h3>Banking & Investment Accounts</h3>
         <img src="images/bankInvestAcc.webp" alt="Wills & Estate Planning">
         <p>Witnessing of bank and investment account applications, with certified Questrade agent services in Qatar & UAE.</p>
-        <a href="#" class="learn-more">Learn More <span>&rarr;</span></a>
+        <a href="/advisoryServices/bankingInvestment.html" class="learn-more">Learn More <span>&rarr;</span></a>
       </div>
 
       <!-- Service Card 6 -->
@@ -122,14 +122,14 @@
         <h3>Family & Divorce Matters</h3>
         <img src="images/divorce.webp" alt="Power of Attorney">
         <p>Consultation for divorce, separation agreements, and family law issues for Canadian expats.</p>
-        <a href="#" class="learn-more">Learn More <span>&rarr;</span></a>
+        <a href="/advisoryServices/family.html" class="learn-more">Learn More <span>&rarr;</span></a>
       </div>
       <!-- Service Card 7 -->
       <div class="service-card">
         <h3>Real Estate Financing</h3>
         <img src="images/reEsFinance.webp" alt="Notarization Services">
         <p>Assistance with financing the purchase of real estate in Canada through our affiliate Canadian company.</p>
-        <a href="#" class="learn-more">Learn More <span>&rarr;</span></a>
+        <a href="/advisoryServices/realestateFinancing.html" class="learn-more">Learn More <span>&rarr;</span></a>
       </div>
 
       <!-- Service Card 8 -->
@@ -137,7 +137,7 @@
         <h3>Canadian Tex Consultancy</h3>
         <img src="images/canadaTax.jpeg" alt="Wills & Estate Planning">
         <p>Advisory on Canadian taxation matters for individuals and businesses with cross-border obligations.</p>
-        <a href="#" class="learn-more">Learn More <span>&rarr;</span></a>
+        <a href="/advisoryServices/canadianTax.html" class="learn-more">Learn More <span>&rarr;</span></a>
       </div>
 
       <!-- Service Card 9 -->
@@ -145,14 +145,14 @@
         <h3>Police Clearance (RCMP)</h3>
         <img src="images/police clearance.webp" alt="Power of Attorney">
         <p>Application assistance for Canadian RCMP police clearance certificates for immigration and employment.</p>
-        <a href="#" class="learn-more">Learn More <span>&rarr;</span></a>
+        <a href="/advisoryServices/policeClearance.html" class="learn-more">Learn More <span>&rarr;</span></a>
       </div>
       <!-- Service Card 10 -->
       <div class="service-card">
         <h3>Immigration & Citizenship</h3>
         <img src="images/immigration.avif" alt="Notarization Services">
         <p>Expert guidance on maintaining Canadian citizenship, dual citizenship options, and immigration matters for Canadian expats and their families.</p>
-        <a href="#" class="learn-more">Learn More <span>&rarr;</span></a>
+        <a href="/advisoryServices/immigration.html" class="learn-more">Learn More <span>&rarr;</span></a>
       </div>
 
       <!-- Service Card 11 -->
@@ -160,7 +160,7 @@
         <h3>Business & Corporate Law</h3>
         <img src="images/businessCorporate.jpg" alt="Wills & Estate Planning">
         <p>Comprehensive legal support for Canadian expats running businesses, including corporate structuring, compliance, and international business law.</p>
-        <a href="#" class="learn-more">Learn More <span>&rarr;</span></a>
+        <a href="/advisoryServices/corporateLaw.html" class="learn-more">Learn More <span>&rarr;</span></a>
       </div>
 
       <!-- Service Card 12 -->
@@ -168,7 +168,7 @@
         <h3>Regulatory Compliance</h3>
         <img src="images/compliance.jpg" alt="Power of Attorney">
         <p>Expert guidance on regulatory compliance matters affecting Canadian expats, including banking, investment, and financial reporting requirements.</p>
-        <a href="#" class="learn-more">Learn More <span>&rarr;</span></a>
+        <a href="/advisoryServices/regulatoryCompliance.html" class="learn-more">Learn More <span>&rarr;</span></a>
       </div>
     </div>
   </div>
@@ -558,7 +558,14 @@ body {
 }
 
 /* Paragraphs, Links, and List Items */
-.footer p,
+.footer p{
+  font-size: 14px;
+  line-height: 1.6;
+  color: #dcdcdc;
+  margin-bottom: 15px;
+  text-align: left;
+}
+
 .footer a,
 .footer li {
   font-size: 14px;
