--- a/ourPresence.html
+++ b/ourPresence.html
@@ -505,7 +505,14 @@ body { font-family: "Times New Roman", serif; }
 }
 
 /* Paragraphs, Links, and List Items */
-.footer p,
+.footer p{
+  font-size: 14px;
+  line-height: 1.6;
+  color: #dcdcdc;
+  margin-bottom: 15px;
+  text-align: left;
+}
+
 .footer a,
 .footer li {
   font-size: 14px;
