updated the content

--- a/ourPresence.html
+++ b/ourPresence.html
@@ -61,7 +61,7 @@
 
     <!-- Right Side -->
     <div class="legal-pr-right">
-      <img src="images/invest.webp" alt="Canada City View with Flag" />
+      <img src="images/global.png" alt="Canada City View with Flag" />
     </div>
   </div>
 </section>
@@ -416,9 +416,9 @@ body { font-family: "Times New Roman", serif; }
 }
 
 .advisory-section .main-heading {
-  font-size: 32px;
+  font-size: 30px;
   margin-bottom: 40px;
-  font-weight: 600;
+  font-weight: normal;
 }
 
 .services {
