--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>KCTT Website</title>
+
+  <!-- Main CSS -->
   <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="script.js">
-  <link rel="stylesheet" href="contact.html">
-  <link rel="stylesheet" href="about.html">
+
+  <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
+  <!-- JS -->
+  <script src="script.js" defer></script>
 </head>
+
 <body>
 
   <!-- Top Contact Bar -->
